Add beacon sub directory to structure.

--- a/article/content/structure.tex
+++ b/article/content/structure.tex
@@ -19,6 +19,7 @@ Unser Beitrag in diesem Projekt besteht einerseits in der Änderung und Ergänzu
     |   +-- ECPMovement/
     |   `-- ECPSignalDetection/
     `-- examples/
+        +-- beacon/
         +-- playground/
         +-- showcase/
         `-- tests/
