--- a/article/content/chess_logic.tex
+++ b/article/content/chess_logic.tex
@@ -104,9 +104,7 @@ Insgesamt bringt jeder Figurtyp individuelle Überlegungen und Implementierungen
 
 % Anmerkung Scope: ein Dezibot
 
-Dabei ist anzumerken, dass der Fokus dieses Projekt sich auf \emph{einen} Dezibot beschränkt, welcher eine Schachfigur simuliert. Daher wurde die Logik für ein komplettes Schachbrett bzw. Schachspiel nicht implementiert. Entsprechend werden Züge, die nur gültig sind, wenn mit diesem eine gegnerische Figur geschlagen werden kann, stets als gültig akzeptiert -- bspw. schlägt ein Bauer diagonal, darf sonst jedoch nur geradeaus laufen~\cite{justUSChessFederations2019}. Hier bietet sich ein Ansatzpunkt für eine folgende Projektarbeit.
-
-% TODO: keine Board-Logik, Figuren überspringen bzw. Platz einnehmen / eigene Figuren schlagen
+Dabei ist anzumerken, dass der Fokus dieses Projekt sich auf \emph{einen} Dezibot beschränkt, welcher eine Schachfigur simuliert. Daher wurde die Logik für ein komplettes Schachbrett bzw. Schachspiel nicht implementiert. Entsprechend werden Züge, die nur gültig sind, wenn mit diesem eine gegnerische Figur geschlagen werden kann, stets als gültig akzeptiert -- bspw. schlägt ein Bauer diagonal, darf sonst jedoch nur geradeaus laufen~\cite{justUSChessFederations2019}. Durch den Fokus wird in der Verifikation ebenfalls nicht behandelt, ob der Weg und das Ziel frei von anderen (auch eigenen) Dezibots ist. Hier bietet sich ein Ansatzpunkt für eine folgende Projektarbeit.
 
 \subsection{Darstellung der Figur}
 \label{sec:display-representation}
