--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -496,7 +496,7 @@ Die Farberkennung verläuft ähnlich zum Ansatz mittels Farbsensor (vgl.~\autore
 
 \begin{listing}[h]
     \inputminted{cpp}{../assets/code/ECPColorDetection-calibrateIRFieldColor.cpp}
-    \caption{Code"=Ausschnitt zur \texttt{ECP"-Color"-Detection::""calibrate\-IR\-Field\-Color}"=Funktion.}
+    \caption{Verkürzter Code"=Ausschnitt zur \texttt{ECP"-Color"-Detection::""calibrate\-IR\-Field\-Color}"=Funktion.}
     \label{code:calibrate-ir-field-color}
 \end{listing}
 
